--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,156 @@
 .DS_Store
 /imgs/*
+
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Packages
+*.egg
+*.egg-info/
+dist/
+build/
+eggs/
+lib/
+lib64/
+parts/
+var/
+sdist/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg-info/
+pip-wheel-metadata/
+*.dist-info/
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Virtual environment
+venv/
+ENV/
+env/
+venv.bak/
+.venv/
+.virtualenv/
+env.bak/
+.venv.bak/
+
+# Pyre type checker
+.pyre/
+
+# Jupyter Notebook checkpoints
+.ipynb_checkpoints
+
+# PyCharm files
+.idea/
+
+# VSCode files
+.vscode/
+.history/
+
+# MacOS specific files
+.DS_Store
+
+# Windows specific files
+Thumbs.db
+
+# Test and coverage results
+htmlcov/
+.tox/
+.nox/
+.coverage
+coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyInstaller
+# Usually these files are written by a python script from a template
+# before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec
+
+# Celery stuff
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.env.*
+.venv
+env/
+venv/
+
+# mypy
+.mypy_cache/
+
+# Pyre
+.pyre/
+
+# Flask cache
+.cache
+
+# Profile
+.prof
+
+# IPython
+.ipython/
+
+# Python IDEs
+.idea/
+.vscode/
+.mypy_cache/
+pyvenv.cfg
+
+# Pylint and Flake8 reports
+pylint-report.txt
+flake8-report.txt
+
+# Local database files (e.g., SQLite)
+*.sqlite3
+*.sqlite
+
+# Environment variables
+.env
+.env.*
+
+# Logs
+*.log
+*.dat
+*.out
+
+# Jupyter Notebook Metadata
+.ipynb_checkpoints
+*.ipynb_checkpoints/
+**/__pycache__/*
+transformer_vq/nn/__pycache__/attn.cpython-39.pyc
